--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
   <title>Social Media Management Services</title>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/Icons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/index.css">
@@ -73,10 +73,9 @@
       </div>
       <div class="index-our-mission-text">
         <h2>OUR MISSION</h2>
-        <p class="index-our-mission-quote"> "We help you grow your business or personal brand on social media 
-            and turn your followers into clients. You are the star of your business.
-            You film the content that we script for you and we take care of the rest!
-            Social media is where your customers are and we make sure they find you."
+        <p class="index-our-mission-quote"> "We help you grow your business on social media 
+            and turn your followers into clients. You film the content that we script. 
+            We take care of the rest! Social media is where your customers are and we make sure they find you."
         </p>
         <div class="index-our-mission-ceo">
           <h4>Dylan James</h4>
@@ -86,7 +85,7 @@
     </div>
   </section>
 
-  <!-- The how it works section -->
+  <!-- How it works section -->
   <section id="how-it-works" class="index-how-it-works">
     <div class="wrapper-main index-how-it-works-flex">
       <h2>HOW IT WORKS</h2>
@@ -94,16 +93,16 @@
         <li class="index-how-it-works-step-list-1">
             <h3>STEP 1.<br>RESEARCH & SCRIPT</h3>
             <p> We study the videos that have done well in your
-               niche and script a month worth of content for you.
+               niche and we script a month worth of content for you.
             </p>
-            <img src="img/step-1.png" alt="step 1">
+            <img src="img/Icons/step-1.png" alt="step 1">
         </li>
         <li class="index-how-it-works-step-list-2">
             <h3>STEP 2.<br>FILM & EDIT</h3>
-            <p> You film the content that we script.
+            <p> You film the content that we script.<br>
               We edit the videos into shorts.
             </p>
-            <img src="img/step-2.png" alt="step 2">
+            <img src="img/Icons/step-2.png" alt="step 2">
         </li>
         <li class="index-how-it-works-step-list-3">
             <h3>STEP 3.<br>UPLOAD</h3>
@@ -111,13 +110,13 @@
               social media platforms (Instagram account, YouTube channel, 
               X account, etc.).
             </p>
-            <img src="img/step-3.png" alt="step 3">
+            <img src="img/Icons/step-3.png" alt="step 3">
         </li>
       </ol>
     </div>
   </section>
 
-  <!-- The services section -->
+  <!-- Our services section -->
   <section id="our-services" class="index-services">
     <div class="wrapper-main index-services-flex">
       <h2 class="index-services-h2">
@@ -128,42 +127,8 @@
         <li class="index-services-plan-1">
           <h3>PRIME</h3>
           <h4>15 Shorts/mo</h4>
-          <p>Perfect for a new business that is beginning to build an online presence.</p>
-          <ul>
-            <li>Onboarding & Review Calls</li>
-            <li>Research</li>
-            <li>Scripting</li>
-            <li>Editing</li>
-            <li>Uploading</li>
-            <li>Quick response to<br>comments & DM's</li>
-            <li>Email Support</li>
-            <li>Monthly Reports</li>
-          </ul>
-          <h3>$2245/mo</h3>
-          <a class="cta-btn cta-btn-index-services-plan-1" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-        </li>
-        <li class="index-services-plan-2">
-          <h3>POWER</h3>
-          <h4>20 Shorts/mo</h4>
-          <p>Ideal for brands ready to increase content quality, engagement, and professionalism.</p>
-          <ul>
-            <li>Onboarding & Review Calls</li>
-            <li>Research</li>
-            <li>Scripting</li>
-            <li>Editing</li>
-            <li>Uploading</li>
-            <li>Quick Response to<br>comments & DM's</li>
-            <li>Email Support</li>
-            <li>Monthly Reports</li>
-          </ul>
-          <h3>$2495/mo</h3>
-          <a class="cta-btn cta-btn-index-services-plan-2" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-        </li>
-        <li class="index-services-plan-3">
-          <h3>PINNACLE</h3>
-          <h4>30 Shorts/mo</h4>
-          <p>The premium, all encompassing, management solution for brands that want to dominate on social media.</p>
-          <ul>
+          <p>Perfect for a new business that wants to build an online presence.</p>
+          <ul class="index-services-plan-1-items">
             <li>Onboarding & Review Calls</li>
             <li>Research</li>
             <li>Scripting</li>
@@ -174,6 +139,40 @@
             <li>Monthly Reports</li>
           </ul>
           <h3>$2995/mo</h3>
+          <a class="cta-btn cta-btn-index-services-plan-1" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
+        </li>
+        <li class="index-services-plan-2">
+          <h3>POWER</h3>
+          <h4>20 Shorts/mo</h4>
+          <p>Ideal for brands ready to increase content quality, engagement, and professionalism.</p>
+          <ul class="index-services-plan-2-items">
+            <li>Onboarding & Review Calls</li>
+            <li>Research</li>
+            <li>Scripting</li>
+            <li>Editing</li>
+            <li>Uploading</li>
+            <li>Quick Response to<br>comments & DM's</li>
+            <li>Email Support</li>
+            <li>Monthly Reports</li>
+          </ul>
+          <h3>$3495/mo</h3>
+          <a class="cta-btn cta-btn-index-services-plan-2" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
+        </li>
+        <li class="index-services-plan-3">
+          <h3>PINNACLE</h3>
+          <h4>30 Shorts/mo</h4>
+          <p>The premium management solution for brands that want to dominate on social media.</p>
+          <ul class="index-services-plan-3-items">
+            <li>Onboarding & Review Calls</li>
+            <li>Research</li>
+            <li>Scripting</li>
+            <li>Editing</li>
+            <li>Uploading</li>
+            <li>Quick response to<br>comments & DM's</li>
+            <li>Email Support</li>
+            <li>Monthly Reports</li>
+          </ul>
+          <h3>$4495/mo</h3>
           <a class="cta-btn cta-btn-index-services-plan-3" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
         </li>
       </ul>
@@ -188,28 +187,28 @@
     <div class="wrapper-main index-faq-flex">
       <h2>FAQ</h2>
       <div>
-        <h5>How do I know If I am a good fit?</h5>
-        <p> If you own a business or have a personal brand and want to grow and sell on social media and you are willing 
+        <h5>How do I know if it's right for me?</h5>
+        <p> If you are a business owner or you have a personal brand and want to grow and sell on social media and you are willing 
           to invest in a growth marketing strategy that has already been proven to work then book a call. 
           Do not call if you are not looking to invest in yourself and your business.
         </p>
-        <h5>What's the point of building my personal brand?</h5>
+        <h5>Why should I have a personal brand?</h5>
         <p> If you have a skill or trade that involves you either working alone or with others on a daily basis then you should have a personal brand.
-          It does not matter what niche you are in. Building your personal brand is about intentionally shaping how others see you to attract opportunities, 
-          build trust, and stand out. You can showcase your unique skills, values, and personality so people know what to expect, 
+          Building your personal brand is about intentionally shaping how others see you to attract opportunities, build trust, and stand out. 
+          You can showcase your unique skills, values, and personality so people know what to expect, 
           leading to better career progression, stronger relationships, and control over your professional narrative. 
         </p>
         <h5>Why should my business be on social media?</h5>
         <p> Over 5.2 billion people use social media globally as of late 2024/early 2025, representing over 60% of the 
           world's population, with numbers still growing steadily. In the U.S., around 246-253 million people use it
-          daily, covering about 73% of the population, with Facebook, YouTube, and Instagram being the most popular platforms.
-          As of 2025, billions use social media for shopping, with around 5.24 billion users worldwide actively on platforms, 
-          and a significant portion buying: about 48% of users have bought directly on social apps, while globally, over 72% 
+          daily, covering about 73% of the nation's population, with Instagram, YouTube, and Facebook being the most popular platforms.
+          <br><br>As of 2025, billions use social media for shopping, with around 5.24 billion users worldwide actively on platforms, 
+          and a significant portion buying goods and services. About 48% of users have bought directly on social media apps, while globally, over 72% 
           research products there, with social commerce sales projected to hit $1.2 trillion globablly end of year. 
         </p>
         <h5>How time consuming is it?</h5>
-        <p> Most of the workload is done for you by us. You just need to film. Film time can very between plans. 
-          You can expect it to take 4-6 hours per month. This varies from person to person and may take longer 
+        <p> Most of the workload is done for you by us. You just need to film. The time is takes you to film can very between plans. 
+          You can expect it to take 4-8 hours per month. Possibly more. This varies from person to person and may take longer 
           if you are just starting out.
         </p>
         <h5>What kind of results can I expect to see?</h5>
@@ -217,16 +216,16 @@
           key to succes on social media. We will make a framework for you. You just need to adhere to it and film content that we script for you. 
         </p>
         <h5>What is short form content?</h5>
-        <p> Short form content are videos 60 seconds or less in 9:16 aspect ratio or 'vertical' format. 
+        <p> Short form content is a video, 60 seconds or less, in 9:16 aspect ratio or vertical format. 
           These consist of Instagram Reels, Facebook Reels, TikTok's, Youtube Shorts, etc.
         </p>
         <h5>What social media platforms do you work with?</h5>
-        <p> Instagram, TikTok, Facebook, Youtube, Linkedin, and X/Twitter. We prfer Instagram because, as of now, it's the best platform to 
-          grow and sell on social media for business owners. Instagram and TikTok target a younger demographic, whereas Facebook and Linkedin 
-          target an older demographic
+        <p> Instagram, TikTok, Facebook, Youtube, Linkedin, and X (formerly Twitter). We prefer Instagram because, as of now, it's the best platform to 
+          grow and sell on social media for new and established business owners. Instagram and TikTok target a younger demographic, whereas Facebook and Linkedin 
+          target an older demographic. YouTube favors educational videos, whereas X favors more polarizing videos.
         </p>
         <h5>How long does it take to see results?</h5>
-        <p> You will start seeing results when we start posting videos! To do the strategy call, research, scripting, filming, and editing 
+        <p> You will start seeing results when we start posting videos. After completing the strategy call, researching, scripting, filming, and editing 
           takes about 3 weeks and then the posting begins!
         </p>
       </div>
@@ -236,6 +235,7 @@
   <!-- The footer section -->
   <footer id="contact" class="footer-main">
     <div class="wrapper-main footer-main-flex">
+      <!-- 
       <h2 class="footer-main-testimonials-h2">TESTIMONIALS</h2>
       <div class="footer-testimony">
         <img src="img/headshot.1.jpg" alt="testimony">
@@ -260,6 +260,7 @@
         <p>"More and more people have been coming into my store because they've heard about me on social media. 
           It's worth the investment working with SBB."</p>
       </div>
+      -->
     
       <a class="cta-btn cta-btn-footer-main" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
 
@@ -274,7 +275,7 @@
         <ul>
           <li>
             <p class="footer-main-closer">Book a call if you are ready to make the investment that
-          your business or personal brand needs in order to grow online and expand your empire.<br><br>
+          your business needs in order to grow online and expand your empire.<br><br>
           We look forward to working with you!</p>
           </li>
         </ul>
