--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <!-- Burger Menu Start -->
+  <!-- BURGER MENU START -->
    <nav class="burger-menu">
       <ul>
         <li><a href="#">HOME</a></li>
@@ -24,9 +24,9 @@
         <li><a href="#contact">CONTACT</a></li>
       </ul>
    </nav>
-   <!-- Burger Menu Stop -->
+   <!-- BURGER MENU STOP -->
 
-  <!-- The header section -->
+  <!-- HEADER MAIN -->
   <header class="header-main">
     <div class="header-main-brand-name">
       <span class="brand-name-full">socialbrandboost</span>
@@ -55,17 +55,19 @@
     <a class="cta-btn cta-btn-header" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
   </header>
 
-  <!-- The main section -->
+  <!-- MAIN / HERO SECTION -->
   <main>
     <div class="wrapper-main index-main-flex">
       <div class="index-main-text">
         <p class="index-main-text-slogan">MORE SALES.<br>MORE VISIBILITY.<br>NO EXTRA WORK.</p>
+        <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
+        <p class="index-main-text-slogan-tall">MORE<br>SALES.<br>MORE<br>VISIBILITY.<br>NO EXTRA<br>WORK.</p>
         <h1 class="index-main-text-title">Monthly Social Media Management Services</h1>
       </div>
     </div>
   </main>
 
-  <!-- Our mission section -->
+  <!-- OUR MISSION SECTION -->
   <section id="our-mission" class="index-our-mission">
     <div class="wrapper-main index-our-mission-flex">
       <div class="index-our-mission-img">
@@ -85,22 +87,21 @@
     </div>
   </section>
 
-  <!-- How it works section -->
+  <!-- HOW IT WORKS SECTION -->
   <section id="how-it-works" class="index-how-it-works">
     <div class="wrapper-main index-how-it-works-flex">
       <h2>HOW IT WORKS</h2>
-      <ol class="index-how-it-works-step-list">
+      <ol>
         <li class="index-how-it-works-step-list-1">
             <h3>STEP 1.<br>RESEARCH & SCRIPT</h3>
-            <p> We study the videos that have done well in your
-               niche and we script a month worth of content for you.
+            <p> We study the videos that went viral in your
+               niche and we script a month of content for you.
             </p>
             <img src="img/Icons/step-1.png" alt="step 1">
         </li>
         <li class="index-how-it-works-step-list-2">
             <h3>STEP 2.<br>FILM & EDIT</h3>
-            <p> You film the content that we script.<br>
-              We edit the videos into shorts.
+            <p> You film the scripted content.<br>We edit the videos into shorts.
             </p>
             <img src="img/Icons/step-2.png" alt="step 2">
         </li>
@@ -116,19 +117,19 @@
     </div>
   </section>
 
-  <!-- Our services section -->
+  <!-- OUR SERVICES SECTION -->
   <section id="our-services" class="index-services">
     <div class="wrapper-main index-services-flex">
       <h2 class="index-services-h2">
         <span class="index-services-h2-full">SOCIAL MEDIA MANAGEMENT SERVICES</span>
         <span class="index-services-h2-short">OUR SERVICES</span>
       </h2>
-      <ul class="index-services-plan">
-        <li class="index-services-plan-1">
+      <div class="index-services-plan">
+        <div class="index-services-plan-1">
           <h3>PRIME</h3>
           <h4>15 Shorts/mo</h4>
-          <p>Perfect for a new business that wants to build an online presence.</p>
-          <ul class="index-services-plan-1-items">
+          <p class="index-services-plan-description">Perfect for a new business that wants to build an online presence.</p>
+          <ul>
             <li>Onboarding & Review Calls</li>
             <li>Research</li>
             <li>Scripting</li>
@@ -138,14 +139,14 @@
             <li>Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <h3>$2995/mo</h3>
+          <p class="index-services-price">$2995/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-1" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-        </li>
-        <li class="index-services-plan-2">
+        </div>
+        <div class="index-services-plan-2">
           <h3>POWER</h3>
           <h4>20 Shorts/mo</h4>
-          <p>Ideal for brands ready to increase content quality, engagement, and professionalism.</p>
-          <ul class="index-services-plan-2-items">
+          <p class="index-services-plan-description">Ideal for brands ready to increase content quality, engagement, and professionalism.</p>
+          <ul>
             <li>Onboarding & Review Calls</li>
             <li>Research</li>
             <li>Scripting</li>
@@ -155,14 +156,14 @@
             <li>Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <h3>$3495/mo</h3>
+          <p class="index-services-price">$3495/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-2" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-        </li>
-        <li class="index-services-plan-3">
+        </div>
+        <div class="index-services-plan-3">
           <h3>PINNACLE</h3>
           <h4>30 Shorts/mo</h4>
-          <p>The premium management solution for brands that want to dominate on social media.</p>
-          <ul class="index-services-plan-3-items">
+          <p class="index-services-plan-description">The premium management solution for brands that want to dominate on social media.</p>
+          <ul>
             <li>Onboarding & Review Calls</li>
             <li>Research</li>
             <li>Scripting</li>
@@ -172,17 +173,17 @@
             <li>Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <h3>$4495/mo</h3>
+          <p class="index-services-price">$4495/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-3" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-        </li>
-      </ul>
+        </div>
+      </div>
       <a class="cta-btn cta-btn-index-services" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
       <p class="index-services-note">Note: If you send less footage than your package deal guarantees, you will still be billed the full amount for that month. No exceptions.<br><br>
          We offer monthly auto-renewing subscriptions so your access never gets interrupted. You're always welcome to cancel or upgrade whenever you like.</p>
     </div>
   </section>
 
-  <!-- The faq section -->
+  <!-- FAQ SECTION -->
   <section id="faq" class="index-faq">
     <div class="wrapper-main index-faq-flex">
       <h2>FAQ</h2>
@@ -232,7 +233,7 @@
     </div>
   </section>
 
-  <!-- The footer section -->
+  <!-- FOOTER MAIN -->
   <footer id="contact" class="footer-main">
     <div class="wrapper-main footer-main-flex">
       <!-- 
