--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <main>
     <div class="wrapper-main index-main-flex">
       <div class="index-main-text">
-        <p class="index-main-text-slogan">MORE SALES.<br>MORE VISIBILITY.<br>NO EXTRA WORK.</p>
+        <p class="index-main-text-slogan">GROW FAST.<br>SELL MORE.<br>DO LESS.</p>
         <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
-        <p class="index-main-text-slogan-tall">MORE<br>SALES.<br>MORE<br>VISIBILITY.<br>NO EXTRA<br>WORK.</p>
+        <p class="index-main-text-slogan-tall">GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.</p>
         <h1 class="index-main-text-title">Monthly Social Media Management Services</h1>
       </div>
     </div>
@@ -94,20 +94,20 @@
       <ol>
         <li class="index-how-it-works-step-list-1">
             <h3>STEP 1.<br>RESEARCH & SCRIPT</h3>
-            <p> We study the videos that went viral in your
+            <p class="index-how-it-works-p1"> We study the videos that went viral in your
                niche and we script a month of content for you.
             </p>
             <img src="img/Icons/step-1.png" alt="step 1">
         </li>
         <li class="index-how-it-works-step-list-2">
             <h3>STEP 2.<br>FILM & EDIT</h3>
-            <p> You film the scripted content.<br>We edit the videos into shorts.
+            <p class="index-how-it-works-p2"> You film the scripted content.<br>We edit the videos into shorts.
             </p>
             <img src="img/Icons/step-2.png" alt="step 2">
         </li>
         <li class="index-how-it-works-step-list-3">
             <h3>STEP 3.<br>UPLOAD</h3>
-            <p> Lastly, we upload the shorts for you to your chosen
+            <p class="index-how-it-works-p3"> Lastly, we upload the shorts for you to your chosen
               social media platforms (Instagram account, YouTube channel, 
               X account, etc.).
             </p>
@@ -233,10 +233,9 @@
     </div>
   </section>
 
-  <!-- FOOTER MAIN -->
-  <footer id="contact" class="footer-main">
-    <div class="wrapper-main footer-main-flex">
-      <!-- 
+  <!-- TESTIMONIALS SECTION -->
+  <section id="testimonials" class="index-testimonials">
+    <!-- 
       <h2 class="footer-main-testimonials-h2">TESTIMONIALS</h2>
       <div class="footer-testimony">
         <img src="img/headshot.1.jpg" alt="testimony">
@@ -262,9 +261,12 @@
           It's worth the investment working with SBB."</p>
       </div>
       -->
-    
+  </section>
+  
+  <!-- FOOTER MAIN -->
+  <footer id="contact" class="footer-main">
+    <div class="wrapper-main footer-main-flex">
       <a class="cta-btn cta-btn-footer-main" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
-
       <div class="footer-sitemap">
         <ul class="footer-sitemap-nav">
           <li><a href="#">HOME</a></li>
