--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="index-main-text-slogan">GROW FAST.<br>SELL MORE.<br>DO LESS.</p>
         <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
         <p class="index-main-text-slogan-tall">GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.</p>
-        <h1 class="index-main-text-title">Monthly Social Media Management Services</h1>
+        <h1 class="index-main-text-title">Monthly Social Media<br>Management Services</h1>
       </div>
     </div>
   </main>
