--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
           </li>
         </ul>
         <ul>
-          <li><p>CONTACT US</p></li>
-          <li><a href="mailto:dylanjamesprime@gmail.com" target="_blank">dylanjamesprime@gmail.com</a></li>
+          <!-- <li><p>CONTACT US</p></li>
+          <li><a href="mailto:dylanjamesprime@gmail.com" target="_blank">dylanjamesprime@gmail.com</a></li> -->
         </ul>
       </div>
     </div>
