--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#how-it-works">HOW IT WORKS</a></li>
         <li><a href="#our-services">OUR SERVICES</a></li>
         <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <!-- <li><a href="#contact">CONTACT</a></li> -->
       </ul>
    </nav>
    <!-- BURGER MENU STOP -->
@@ -39,7 +39,7 @@
         <li><a href="#how-it-works">HOW IT WORKS</a></li>
         <li><a href="#our-services">OUR SERVICES</a></li>
         <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <!-- <li><a href="#contact">CONTACT</a></li> -->
       </ul>
     </nav>
     <div class="header-main-sm">
