--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           research products there, with social commerce sales projected to hit $1.2 trillion globablly end of year. 
         </p>
         <h5>How time consuming is it?</h5>
-        <p> Most of the workload is done for you by us. You just need to film. The time is takes you to film can very between plans. 
+        <p> Most of the workload is done for you by us. You just need to film. The time it takes you to film can very between plans. 
           You can expect it to take 4-8 hours per month. Possibly more. This varies from person to person and may take longer 
           if you are just starting out.
         </p>
@@ -218,12 +218,12 @@
         </p>
         <h5>What is short form content?</h5>
         <p> Short form content is a video, 60 seconds or less, in 9:16 aspect ratio or vertical format. 
-          These consist of Instagram Reels, Facebook Reels, TikTok's, Youtube Shorts, etc.
+          These consist of Instagram Reels, TikTok's, Youtube Shorts, etc.
         </p>
         <h5>What social media platforms do you work with?</h5>
-        <p> Instagram, TikTok, Facebook, Youtube, Linkedin, and X (formerly Twitter). We prefer Instagram because, as of now, it's the best platform to 
+        <p> Instagram, TikTok, Youtube, Facebook, Linkedin, and X (formerly Twitter). We prefer Instagram because, as of now, it's the best platform to 
           grow and sell on social media for new and established business owners. Instagram and TikTok target a younger demographic, whereas Facebook and Linkedin 
-          target an older demographic. YouTube favors educational videos, whereas X favors more polarizing videos.
+          target an older demographic. YouTube favors educational videos, whereas X favors polarizing videos.
         </p>
         <h5>How long does it take to see results?</h5>
         <p> You will start seeing results when we start posting videos. After completing the strategy call, researching, scripting, filming, and editing 
