--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#how-it-works">HOW IT WORKS</a></li>
         <li><a href="#our-services">OUR SERVICES</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <!-- <li><a href="#testimonials">TESTIMONIALS</a></li> -->
         <!-- <li><a href="#contact">CONTACT</a></li> -->
       </ul>
    </nav>
@@ -39,17 +40,16 @@
         <li><a href="#how-it-works">HOW IT WORKS</a></li>
         <li><a href="#our-services">OUR SERVICES</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <!-- <li><a href="#testimonials">TESTIMONIALS</a></li> -->
         <!-- <li><a href="#contact">CONTACT</a></li> -->
       </ul>
     </nav>
     <div class="header-main-sm">
-      <ul>
-        <li class="header-main-sm-ig"></li>
-        <li class="header-main-sm-fb"></li>
-        <li class="header-main-sm-tt"></li>
-        <li class="header-main-sm-yt"></li>
-        <li class="header-main-sm-x"></li>
-      </ul>
+      <a href="https://www.instagram.com/dylanjamesprime/" target="_blank"><div class="header-main-sm-ig"></div></a>
+      <a href="https://www.facebook.com/dylanjamesprime/" target="_blank"><div class="header-main-sm-fb"></div></a>
+      <a href="https://x.com/dylanjamesprime" target="_blank"><div class="header-main-sm-x"></div></a>
+      <a href="https://www.tiktok.com/@dylanjamesprime" target="_blank"><div class="header-main-sm-tt"></div></a>
+      <a href="https://www.youtube.com/@realdylanjames" target="_blank"><div class="header-main-sm-yt"></div></a>
     </div>
     <div class="burger-menu-btn"></div>
     <a class="cta-btn cta-btn-header" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
@@ -135,11 +135,12 @@
             <li>Scripting</li>
             <li>Editing</li>
             <li>Uploading</li>
+            <li>5 Lead-Generating<br>Instagram Stories</li>
             <li>Quick response to<br>comments & DM's</li>
-            <li>Email Support</li>
+            <li>24/7 Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <p class="index-services-price">$2995/mo</p>
+          <p class="index-services-price">$2245/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-1" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
         </div>
         <div class="index-services-plan-2">
@@ -152,11 +153,12 @@
             <li>Scripting</li>
             <li>Editing</li>
             <li>Uploading</li>
+            <li>7 Lead-Generating<br>Instagram Stories</li>
             <li>Quick Response to<br>comments & DM's</li>
-            <li>Email Support</li>
+            <li>24/7 Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <p class="index-services-price">$3495/mo</p>
+          <p class="index-services-price">$2495/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-2" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
         </div>
         <div class="index-services-plan-3">
@@ -169,11 +171,12 @@
             <li>Scripting</li>
             <li>Editing</li>
             <li>Uploading</li>
+            <li>10 Lead-Generating<br>Instagram Stories</li>
             <li>Quick response to<br>comments & DM's</li>
-            <li>Email Support</li>
+            <li>24/7 Email Support</li>
             <li>Monthly Reports</li>
           </ul>
-          <p class="index-services-price">$4495/mo</p>
+          <p class="index-services-price">$2995/mo</p>
           <a class="cta-btn cta-btn-index-services-plan-3" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
         </div>
       </div>
@@ -235,39 +238,41 @@
 
   <!-- TESTIMONIALS SECTION -->
   <section id="testimonials" class="index-testimonials">
-    <!-- 
-      <h2 class="footer-main-testimonials-h2">TESTIMONIALS</h2>
-      <div class="footer-testimony">
-        <img src="img/headshot.1.jpg" alt="testimony">
-        <p>"Dylan showed me the power of social media marketing. I just started working with him
-          and I already have new leads coming my way!"</p>
+      <div class="wrapper-main index-testimonials-flex">
+        <h2 class="index-testimonials-h2">TESTIMONIALS</h2>
+        <div class="testimonial">
+          <img src="img/headshot.1.jpg" alt="testimonial">
+          <p>"Dylan showed me the power of social media marketing. I just started working with him
+            and I already have new leads coming my way!"</p>
+        </div>
+        <div class="testimonial">
+          <img src="img/headshot.2.jpg" alt="testimonial">
+          <p>"Social Brand Boost has structured my social media so that all the guess-work is no longer a thing! Thank you!!"</p>
+        </div>
+        <div class="testimonial">
+          <img src="img/headshot.3.jpg" alt="testimonial">
+          <p>"I new there had to be a better way to get clients than just word of mouth and door-to-door sales. 
+            Social Brand Boost made it easy for me to market online."</p>
+        </div>
+        <div class="testimonial">
+          <img src="img/headshot.4.jpg" alt="testimonial">
+          <p>"My niche is real-estate. Since I've started working with Social Brand Boost, I've had leads coming in like crazy!"</p>
+        </div>
+        <div class="testimonial">
+          <img src="img/headshot.5.jpg" alt="testimonial">
+          <p>"More and more people have been coming into my store because they've heard about me on social media. 
+            It's worth the investment working with SBB."</p>
+        </div>
       </div>
-      <div class="footer-testimony">
-        <img src="img/headshot.2.jpg" alt="testimony">
-        <p>"Social Brand Boost has structured my social media so that all the guess-work is no longer a thing! Thank you!!"</p>
-      </div>
-      <div class="footer-testimony">
-        <img src="img/headshot.3.jpg" alt="testimony">
-        <p>"I new there had to be a better way to get clients than just word of mouth and door-to-door sales. 
-          Social Brand Boost made it easy for me to market online."</p>
-      </div>
-      <div class="footer-testimony">
-        <img src="img/headshot.4.jpg" alt="testimony">
-        <p>"My niche is real-estate. Since I've started working with Social Brand Boost, I've had leads coming in like crazy!"</p>
-      </div>
-      <div class="footer-testimony">
-        <img src="img/headshot.5.jpg" alt="testimony">
-        <p>"More and more people have been coming into my store because they've heard about me on social media. 
-          It's worth the investment working with SBB."</p>
-      </div>
-      -->
   </section>
   
   <!-- FOOTER MAIN -->
   <footer id="contact" class="footer-main">
     <div class="wrapper-main footer-main-flex">
       <a class="cta-btn cta-btn-footer-main" href="https://calendly.com/dylanjamesprime/30min" target="_blank">BOOK A CALL</a>
+      <!-- FOOTER SITEMAP -->
       <div class="footer-sitemap">
+        <!-- FOOTER SITEMAP NAVIGATION -->
         <ul class="footer-sitemap-nav">
           <li><a href="#">HOME</a></li>
           <li><a href="#our-mission">OUR MISSION</a></li>
@@ -275,21 +280,27 @@
           <li><a href="#our-services">OUR SERVICES</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
-        <ul>
-          <li>
-            <p class="footer-main-closer">Book a call if you are ready to make the investment that
+        <!-- FOOTER CLOSING STATEMENT -->
+        <p class="footer-main-closer">Book a call if you are ready to make the investment that
           your business needs in order to grow online and expand your empire.<br><br>
           We look forward to working with you!</p>
-          </li>
-        </ul>
-        <ul>
-          <!-- <li><p>CONTACT US</p></li>
-          <li><a href="mailto:dylanjamesprime@gmail.com" target="_blank">dylanjamesprime@gmail.com</a></li> -->
-        </ul>
+        <!-- FOOTER SOCIAL MEDIA DIRECTORY -->
+        <p class="footer-main-sm-directory">Checkout our social media to get a better 
+          understanding of what we do and how we can help you!</p>
+      </div>
+      <!-- FOOTER SOCIAL MEDIA LINKS -->
+      <div class="footer-spacer"></div>
+      <div class="footer-main-sm">
+      <a href="https://www.instagram.com/dylanjamesprime/" target="_blank"><div class="footer-main-sm-ig"></div></a>
+      <a href="https://www.facebook.com/dylanjamesprime/" target="_blank"><div class="footer-main-sm-fb"></div></a>
+      <a href="https://x.com/dylanjamesprime" target="_blank"><div class="footer-main-sm-x"></div></a>
+      <a href="https://www.tiktok.com/@dylanjamesprime" target="_blank"><div class="footer-main-sm-tt"></div></a>
+      <a href="https://www.youtube.com/@realdylanjames" target="_blank"><div class="footer-main-sm-yt"></div></a>
       </div>
     </div>
   </footer>
 
+  <!-- BURGER BUTTON PROGRAMMING -->
   <script src="js/main.js"></script>
 
 </body>
