--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   <main>
     <div class="wrapper-main index-main-flex">
       <div class="index-main-text">
-        <p class="index-main-text-slogan">GROW FAST.<br>SELL MORE.<br>DO LESS.</p>
+        <p class="index-main-text-slogan">CHECKMATE YOUR COMPETITION WITHOUT<br>LIFTING A FINGER ONLINE.</p>        <!--GROW FAST.<br>SELL MORE.<br>DO LESS.-->
         <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
-        <p class="index-main-text-slogan-tall">GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.</p>
+        <p class="index-main-text-slogan-tall">CHECKMATE YOUR<br>COMPETITION WITHOUT<br>LIFTING A<br>FINGER ONLINE.</p>        <!--GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.-->
         <h1 class="index-main-text-title">Monthly Social Media<br>Management Services</h1>
       </div>
     </div>
@@ -76,7 +76,7 @@
       <div class="index-our-mission-text">
         <h2>OUR MISSION</h2>
         <p class="index-our-mission-quote"> "We help you grow your business on social media 
-            and turn your followers into clients. You film the content that we script. 
+            by turning your followers into clients. You film the content that we script. 
             We take care of the rest! Social media is where your customers are and we make sure they find you."
         </p>
         <div class="index-our-mission-ceo">
@@ -197,10 +197,9 @@
           Do not call if you are not looking to invest in yourself and your business.
         </p>
         <h5>Why should I have a personal brand?</h5>
-        <p> If you have a skill or trade that involves you either working alone or with others on a daily basis then you should have a personal brand.
+        <p> If you have a skill, a trade, a service, or a good, that you can market and sell, then you should have a personal brand.
           Building your personal brand is about intentionally shaping how others see you to attract opportunities, build trust, and stand out. 
-          You can showcase your unique skills, values, and personality so people know what to expect, 
-          leading to better career progression, stronger relationships, and control over your professional narrative. 
+          All of the content you watch on YouTube, consume on TikTok, Interact with on Instagram or Facebook, is the product of a personal brand. 
         </p>
         <h5>Why should my business be on social media?</h5>
         <p> Over 5.2 billion people use social media globally as of late 2024/early 2025, representing over 60% of the 
@@ -208,7 +207,8 @@
           daily, covering about 73% of the nation's population, with Instagram, YouTube, and Facebook being the most popular platforms.
           <br><br>As of 2025, billions use social media for shopping, with around 5.24 billion users worldwide actively on platforms, 
           and a significant portion buying goods and services. About 48% of users have bought directly on social media apps, while globally, over 72% 
-          research products there, with social commerce sales projected to hit $1.2 trillion globablly end of year. 
+          research products there, with social commerce sales projected to hit $1.2 trillion globablly end of year.
+          <br><br>If you truly want to sell to as many people as possible, then your business need to be on social media. 
         </p>
         <h5>How time consuming is it?</h5>
         <p> Most of the workload is done for you by us. You just need to film. The time it takes you to film can very between plans. 
