--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p class="index-main-text-slogan">CHECKMATE YOUR COMPETITION WITHOUT<br>LIFTING A FINGER ONLINE.</p>        <!--GROW FAST.<br>SELL MORE.<br>DO LESS.-->
         <!-- FOR PHONES & SMALL TABLETS WITH TALL SCREENS (PORTRAIT) -->
         <p class="index-main-text-slogan-tall">CHECKMATE YOUR<br>COMPETITION WITHOUT<br>LIFTING A<br>FINGER ONLINE.</p>        <!--GROW<br>FAST.<br>SELL<br>MORE.<br>DO<br>LESS.-->
-        <h1 class="index-main-text-title">Monthly Social Media<br>Management Services</h1>
+        <h1 class="index-main-text-title">Monthly Social Media Management Services</h1>
       </div>
     </div>
   </main>
